<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.theme.FeesActivity">

    <TextView
        android:id="@+id/tvFeeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/calculadora_de_tarifas"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etTransferAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/monto_a_transferir"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/tvFeeTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"/>

    <TextView
        android:id="@+id/tvCalculatedFee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tarifa_estimada_0_00"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/etTransferAmount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnCalculateFee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcular_tarifa"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvCalculatedFee"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
